2002-05-05  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-uri.c (uri_get_doc_type): 
	- Now implements jrb's ghelp-uri scheme.
	- added doc_path-argument so that it doesn't have to be calculated
	  twice when creating a YelpURI.
	(uri_get_path_from_relative): added/impl.
	(uri_locate_help_file): added/impl.
	(uri_locate_help_file_with_lang): added/impl.
	(yelp_uri_new): removed the GError-argument.

	* src/test-uri.c (main): 
	- be a GnomeProgram so that it can actually test something :)

	* src/yelp-error.h: added YELP_ERROR_URI_NOT_EXIST

	* src/yelp-uri.[ch]: 
	- Added, this is functions for manipulating and working with the
	  different uri-schemes possible.

	* src/Makefile.am:
	- added test-uri.
	- added yelp-uri.[ch]

2002-05-04  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl: remove non-linking Next >>>
	  and change the codition that triggers table of contents in hopes
	  it fixes the bug where it is not displayed

2002-05-02  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl: add 'About This Document' link,
	  change toc to contents, change prev to previous, fix whitespace in
	  itemized lists and variable lists

2002-05-02  Jacob Berkman  <jacob@ximian.com>

	* configure.in: bump version back to 0.6.99

2002-05-01  Sander Vesik <sander.vesik@sun.com>

	* stylesheets/yelp-customization.xsl:	introduce css

2002-05-01  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (yelp_view_toc_start): translation fix
	  reported by Jordi Mallach.

2002-04-29  Christophe Merlet  <christophe@merlet.net>

	* src/Makefile.am: Added $(DESTDIR) variable.

2002-04-29  Mikael Hallendal  <micke@codefactory.se>

	* Release 0.6.1

	* configure.in: bumped version to 0.6.1

	* NEWS: updated for 0.6.1

2002-04-28  Mikael Hallendal  <micke@codefactory.se>

	* src/Makefile.am (INCLUDES): removed -I$(includedir).

2002-04-28  Pablo Saratxaga  <pablo@mandrakesoft.com>
